# kerneldex

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  install.sh  mix.exs
assets/css/: app.css
assets/js/: app.js
cli/: Cargo.toml  pyproject.toml
cli/src/: client.rs  config.rs  main.rs
cli/src/kerneldex/: cli.py  client.py  config.py
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: kerneldex.ex  kerneldex_web.ex
lib/kerneldex/: accounts.ex  application.ex  catalog.ex  github.ex  release.ex  repo.ex
lib/kerneldex/accounts/: api_token.ex  user.ex
lib/kerneldex/catalog/: kernel.ex
lib/kerneldex_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/kerneldex_web/components/: core_components.ex  layouts.ex
lib/kerneldex_web/components/layouts/: root.html.heex
lib/kerneldex_web/controllers/: auth_controller.ex  error_html.ex  error_json.ex  page_controller.ex  page_html.ex
lib/kerneldex_web/controllers/api/: kernel_controller.ex
lib/kerneldex_web/plugs/: api_auth.ex  auth.ex
lib/mix/tasks/: version.ex
priv/repo/: seeds.exs
priv/repo/migrations/: 20260317000001_create_users.exs  20260317000002_create_kernels.exs  20260317000003_create_api_tokens.exs  20260318000001_add_source_code_require_source_url.exs  20260318000002_make_name_and_source_project_nullable.exs  20260319074304_unique_source_url.exs
test/: test_helper.exs
test/kerneldex_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
test/support/: conn_case.ex  data_case.ex
(+3 files in other folders)
