[package]
name = "kerneldex"
version = "0.1.1"
edition = "2024"
description = "CLI for KernelDex — community-curated GPU kernel index"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
open = "5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
