[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kerneldex"
version = "0.1.0"
description = "CLI for KernelDex — community-curated GPU kernel index"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
]

[project.scripts]
kerneldex = "kerneldex.cli:cli"
